tests/typing/bad/testfile-no_return2-1.scala
class A {
    def f() : Int = {
	if (false)
	    return 0
    }
}
object Main { def main(args: Array[String]) { } }
